--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -26,25 +26,23 @@
 % Document starts
 \begin{document}
 % Title portion
-\title{Fairness, Equality, and Equity: Algorithmic Approaches}
-\titlenote{Current state and future}
+\title{Justicia, Igualdad y Equidad: enfoques algorítmicos}
+\titlenote{Estado actual y visiones futuras}
 
 \author{Juan Enrique Stücker Martínez}
 \orcid{1234-5678-9012-3456}
 \affiliation{%
   \institution{RWTH Aachen University}
   \city{Aachen}
-  \country{Germany}}
+  \country{Alemania}}
 \email{juan.stuecker@rwth-aachen.de}
 
 %
 
 \begin{abstract}
-  Some of the basic needs for a society to function well - as hard as it is to define wellness in a social context - are "fairness", "equality", and "equity" for all the people taking part \textsl{in} the society. Fighting injustice is always a pressing subject in human societies. In the contemporary world expressing concern is now more democratized with access to the internet and in the hands of a bigger section of the population, which makes possible to diversify the topics in public discussion. Despite of this shift, it still is a rather untouched subject to judge and impose standards on algorithms by these 3 basic concepts. This paper will try to define what it means for an algorithm to be fair and for it to enforce equality and or equity. \\
-  Today's world is no absent of algorithms whose functionality affects certain groups of people more than others. The technological world has failed in many mainstream services we use in our day-to-day life to reach these goals, but concern has led to some change and a growing motivation for action, both from Academia as well as from the population and the Market itself. As uncomfortable, and even inconvenient as it is, this evolution is necessary.\\
-  By describing the mathematical and abstract concepts that attempt to replicate or represent these key themes (Fairness, Equality, Equity), and the ceonceptual problems that result in the creation of these definitions, we can gain a different perspective on how to engage with these difficult problems. Problems that for a long time were mainly approached from the Social and Political Sciences.\\
-  More on, not only can Algorithms reach for a moral standard, in some cases they can even help to solve more general social problems in humanity.
-  That is what algorithms can be, a double-edged sword.
+  Conceptos básicos de justicia social como Igualdad y Equidad, no han sido correctamente adaptados a tecnologías algorítmicas emergentes. Este artículo pretende definir el significado de justicia para un algorítmo, junto con los subconceptos de equidad, e igualdad. El mundo tecnológico ha dallado en muchos servicios públicos en alcanzar estos objetivos, sin embargo el campo de justicia algorítmica ha ganado tracción los ultimos anos, empezando en la academia, y lentamente en la población y el mercado.
+  Por mas incomoda, e incluso inconveniente que sea esta area de investigación, esta evolución es necesaria.
+  Al describir los conceptos enlistados en el titulo del artiulo desde el campo de las matématicas ganamos una perspectiva y consequentemente mayor información sobre como abordar estos problemas, y generar soluciones efectivas para combatirlos. Esta visión también ofrece una mirada a la posibilidad de abordar problemas de las ciencias sociales desde las ciencias computacionales.
 
 \end{abstract}
 
